# celebraphone

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build.sh  deploy.sh  docker-compose.yml  face-replace.cpp  face-replace.hpp  index.html  mime.types  package-lock.json  package.json  server
cpp/: CMakeLists.txt  face-replace.cpp  premodule.js
docker/: Dockerfile_e2e  Dockerfile_wasm
js/: lifecycle.js  main.js
scripts/: build.sh  build_static.sh  deploy.sh
static/: style.css
tests/: local.runner.js  nightwatch.local.conf.js
tests/e2e/: index.js
wasm/: CMakeLists.txt  bindings.js  bindings_high.js  face-detect.cpp  face-detect.hpp  face-replace.cpp  face-replace.hpp  face.js  worker.js
